chore(vs-code): add dev relative extensions
For Vue and JavaScript/TypeScript
- `vue.vscode-typescript-vue-plugin`

For Quasar:
- `abdelaziz18003.quasar-snippets`
- `codecoaching.quasar-docs`

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,10 @@
 {
   "recommendations": [
+    "abdelaziz18003.quasar-snippets",
+    "codecoaching.quasar-docs",
     "dbaeumer.vscode-eslint",
     "editorconfig.editorconfig",
+    "vue.vscode-typescript-vue-plugin",
     "vue.volar",
     "wayou.vscode-todo-highlight"
   ],
