--- a/.github/workflows/quasar.yml
+++ b/.github/workflows/quasar.yml
@@ -39,6 +39,8 @@ jobs:
         env:
           GOOGLE_API_CLIENT_ID: ${{ secrets.GOOGLE_API_CLIENT_ID }}
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          SHEET_NAME: ${{ secrets.SHEET_NAME }}
         run: pnpm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
