--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "typescript": "^4.5.4"
   },
   "engines": {
-    "node": "^18 || ^16 || ^14.19",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
+    "node": "^21 || ^20 ||  ^18",
+    "pnpm":">= 8"
   }
 }
