--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "luxon": "^3.1.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "turndown": "^7.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
@@ -30,12 +31,13 @@
     "@quasar/app-vite": "^1.0.0",
     "@types/gapi": "^0.0.43",
     "@types/gapi.calendar": "^3.0.6",
-    "@types/gapi.client.sheets": "^4.0.20201031",
     "@types/gapi.client.people": "^1.0.5",
+    "@types/gapi.client.sheets": "^4.0.20201031",
     "@types/google.accounts": "^0.0.4",
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.1.0",
     "@types/node": "^12.20.21",
+    "@types/turndown": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "autoprefixer": "^10.4.2",
@@ -48,6 +50,6 @@
   },
   "engines": {
     "node": "^21 || ^20 ||  ^18",
-    "pnpm":">= 8"
+    "pnpm": ">= 8"
   }
 }
